--- a/css/dialog.css
+++ b/css/dialog.css
@@ -15,11 +15,11 @@
 	border-left:0 solid transparent;
 	border-top:0 solid transparent;
 	border-right:0 solid transparent;
-	-moz-border-radius-bottomleft: 0; 
-	-webkit-border-bottom-left-radius: 0; 
-	border-bottom-left-radius: 0; 
-	-moz-border-radius-bottomright: 0; 
-	-webkit-border-bottom-right-radius: 0; 
+	-moz-border-radius-bottomleft: 0;
+	-webkit-border-bottom-left-radius: 0;
+	border-bottom-left-radius: 0;
+	-moz-border-radius-bottomright: 0;
+	-webkit-border-bottom-right-radius: 0;
 	border-bottom-right-radius: 0;
 	font-weight:normal;
 	padding:.2em 1em;
@@ -67,7 +67,7 @@
 .std42-dialog .ui-dialog-buttonpane button span { padding:2px 9px; }
 .std42-dialog .ui-dialog-buttonpane button span.ui-icon { padding: 2px; }
 
-.elfinder-dialog .ui-resizable-e, 
+.elfinder-dialog .ui-resizable-e,
 .elfinder-dialog .ui-resizable-s { width:0; height:0;}
 
 .std42-dialog .ui-button input { cursor: pointer;}
@@ -105,7 +105,7 @@
 	border-bottom:1px solid #ccc;
 	position:relative;
 	padding:.5em;
-	
+
 	text-align:center;
 	overflow:hidden;
 }
@@ -132,13 +132,13 @@
 }
 
 .elfinder-notify-progressbar, .elfinder-notify-progress {
-	-moz-border-radius: 2px; 
-	-webkit-border-radius: 2px; 
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
 	border-radius: 2px;
 }
 
 /* icons */
-.elfinder-dialog-icon-open, 
+.elfinder-dialog-icon-open,
 .elfinder-dialog-icon-readdir,
 .elfinder-dialog-icon-file        { background-position: 0 -225px; }
 .elfinder-dialog-icon-reload      { background-position: 0 -225px; }
@@ -150,6 +150,7 @@
 .elfinder-dialog-icon-upload      { background-position: 0 -160px; }
 .elfinder-dialog-icon-chunkmerge  { background-position: 0 -160px; }
 .elfinder-dialog-icon-rm          { background-position: 0 -192px; }
+.elfinder-dialog-icon-permissions,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
@@ -210,12 +211,12 @@
 .elfinder-info-tb span { float:left;}
 .elfinder-info-tb a { outline: none; text-decoration:underline; }
 .elfinder-info-tb a:hover { text-decoration:none; }
-.elfinder-info-spinner { 
+.elfinder-info-spinner {
 	width:14px;
 	height:14px;
 	float:left;
 	background: url("../img/spinner-mini.gif") center center no-repeat;
-	margin:0 5px; 
+	margin:0 5px;
 }
 
 .elfinder-netmount-tb { margin:0 auto; }
@@ -319,4 +320,18 @@ button.elfinder-info-button {
 
 .elfinder-rm-title+br {
 	display: none;
+}
+
+/************************* PERMISSION STYLE ***********************************/
+
+.elfinder-permissions-clientile {
+	display:inline-block;
+	margin:2px;
+	border:1px solid #cccccc;
+	background-color:white;
+	padding:5px;
+}
+
+.elfinder-permissions-clients {
+	padding: 5px 0 5px 0px;
 }
