--- a/css/dialog.css
+++ b/css/dialog.css
@@ -335,3 +335,7 @@ button.elfinder-info-button {
 .elfinder-permissions-padding {
 	padding: 5px 0 5px 0px;
 }
+
+#assigned-claims {
+	max-width: 450px;
+}
