Ticket 33 : Display client information

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -152,6 +152,7 @@
 .elfinder-dialog-icon-rm          { background-position: 0 -192px; }
 .elfinder-dialog-icon-permissions,
 .elfinder-dialog-icon-addpermissions,
+.elfinder-dialog-icon-clientinformation,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
