Ticket 33 : Display authorization policy

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -153,6 +153,7 @@
 .elfinder-dialog-icon-permissions,
 .elfinder-dialog-icon-addpermissions,
 .elfinder-dialog-icon-clientinformation,
+.elfinder-dialog-icon-authpolicy,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
@@ -326,7 +327,7 @@ button.elfinder-info-button {
 
 /************************* PERMISSION STYLE ***********************************/
 
-.elfinder-permissions-checkbox {
+.elfinder-white-box {
 	display:inline-block;
 	margin:2px;
 	border:1px solid #cccccc;
@@ -346,6 +347,6 @@ button.elfinder-info-button {
 	height: 50px;
 }
 
-#assigned-claims {
-	max-width: 450px;
+.dialog-size {
+	max-width: 500px;
 }
