--- a/css/dialog.css
+++ b/css/dialog.css
@@ -154,6 +154,7 @@
 .elfinder-dialog-icon-addpermissions,
 .elfinder-dialog-icon-clientinformation,
 .elfinder-dialog-icon-authpolicy,
+.elfinder-dialog-icon-addclient,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
