Ticket 161 : Remove a client

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -155,6 +155,7 @@
 .elfinder-dialog-icon-clientinformation,
 .elfinder-dialog-icon-authpolicy,
 .elfinder-dialog-icon-addclient,
+.elfinder-dialog-icon-removeclient,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
