--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -107,6 +107,7 @@
 .elfinder-button-icon-open      { background-position: 0 -176px; }
 .elfinder-button-icon-mkdir     { background-position: 0 -192px; }
 .elfinder-button-icon-mkfile    { background-position: 0 -208px; }
+.elfinder-button-icon-removeclient,
 .elfinder-button-icon-rm        { background-position: 0 -224px; }
 .elfinder-button-icon-copy      { background-position: 0 -240px; }
 .elfinder-button-icon-cut       { background-position: 0 -256px; }
