--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -122,6 +122,7 @@
 .elfinder-button-icon-download  { background-position: 0 -384px; }
 .elfinder-button-icon-clientinfo,
 .elfinder-button-icon-authpolicy,
+.elfinder-button-icon-resourceinfo,
 .elfinder-button-icon-info      { background-position: 0 -400px; }
 .elfinder-button-icon-extract   { background-position: 0 -416px; }
 .elfinder-button-icon-archive   { background-position: 0 -432px; }
