--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -109,6 +109,7 @@
 .elfinder-button-icon-mkfile    { background-position: 0 -208px; }
 .elfinder-button-icon-removeclient,
 .elfinder-button-icon-rmpolicy,
+.elfinder-button-icon-rmresource,
 .elfinder-button-icon-rm        { background-position: 0 -224px; }
 .elfinder-button-icon-copy      { background-position: 0 -240px; }
 .elfinder-button-icon-cut       { background-position: 0 -256px; }
