Ticket 33 : Remove scope

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -110,6 +110,7 @@
 .elfinder-button-icon-removeclient,
 .elfinder-button-icon-rmpolicy,
 .elfinder-button-icon-rmresource,
+.elfinder-button-icon-rmscope,
 .elfinder-button-icon-rm        { background-position: 0 -224px; }
 .elfinder-button-icon-copy      { background-position: 0 -240px; }
 .elfinder-button-icon-cut       { background-position: 0 -256px; }
