--- a/css/dialog.css
+++ b/css/dialog.css
@@ -159,6 +159,7 @@
 .elfinder-dialog-icon-rmpolicy,
 .elfinder-dialog-icon-resourceinfo,
 .elfinder-dialog-icon-rmresource,
+.elfinder-dialog-icon-rmscope,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
