Ticket 33 : Fix some issues & can view scope

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -125,6 +125,8 @@
 .elfinder-button-icon-clientinfo,
 .elfinder-button-icon-authpolicy,
 .elfinder-button-icon-resourceinfo,
+.elfinder-button-icon-scopeinfo,
+.elfinder-button-icon-accessinfo,
 .elfinder-button-icon-info      { background-position: 0 -400px; }
 .elfinder-button-icon-extract   { background-position: 0 -416px; }
 .elfinder-button-icon-archive   { background-position: 0 -432px; }
