--- a/css/dialog.css
+++ b/css/dialog.css
@@ -160,6 +160,8 @@
 .elfinder-dialog-icon-resourceinfo,
 .elfinder-dialog-icon-rmresource,
 .elfinder-dialog-icon-rmscope,
+.elfinder-dialog-icon-scopeinfo,
+.elfinder-dialog-icon-accessinfo,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
