--- a/css/theme.css
+++ b/css/theme.css
@@ -57,3 +57,13 @@
 .elfinder-contextmenu .ui-state-hover { background: #3875d7; color:#fff; }
 .elfinder-contextmenu .ui-state-hover .elfinder-contextmenu-arrow { background-image:url('../img/arrows-active.png'); }
 
+.permission-menu-item {
+	background-color:rgba(128, 128, 128, 0.32);
+	padding:2px 15px 2px 15px;
+	border: 1px solid gray;
+}
+
+.permission-size {
+	overflow:auto;
+	height: 400px;
+}
