--- a/css/dialog.css
+++ b/css/dialog.css
@@ -165,6 +165,7 @@
 .elfinder-dialog-icon-userinfo,
 .elfinder-dialog-icon-rmuser,
 .elfinder-dialog-icon-updateuser,
+.elfinder-dialog-icon-updateresource,
 .elfinder-dialog-icon-download    { background-position: 0 -260px; }
 .elfinder-dialog-icon-save        { background-position: 0 -295px; }
 .elfinder-dialog-icon-rename      { background-position: 0 -330px; }
