--- a/css/commands.css
+++ b/css/commands.css
@@ -384,7 +384,8 @@ div.elfinder-cwd-wrapper-list tr.ui-state-default td span.ui-icon {
 	font-weight: bold;
 }
 
-#scopes-resource td {
+#scopes-resource td,
+#authorization-policy td {
 	text-align: left;
 }
 
