--- a/css/dialog.css
+++ b/css/dialog.css
@@ -155,6 +155,7 @@
 .elfinder-dialog-icon-clientinformation,
 .elfinder-dialog-icon-authpolicy,
 .elfinder-dialog-icon-addclient,
+.elfinder-dialog-icon-mkuser,
 .elfinder-dialog-icon-removeclient,
 .elfinder-dialog-icon-rmpolicy,
 .elfinder-dialog-icon-resourceinfo,
