Ticket 181 : Add scope

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -156,6 +156,7 @@
 .elfinder-dialog-icon-authpolicy,
 .elfinder-dialog-icon-addclient,
 .elfinder-dialog-icon-mkuser,
+.elfinder-dialog-icon-mkscope,
 .elfinder-dialog-icon-removeclient,
 .elfinder-dialog-icon-rmpolicy,
 .elfinder-dialog-icon-resourceinfo,
