--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -149,6 +149,7 @@
 .elfinder-button-icon-opendir   { background-position: 0  -32px; }
 .elfinder-button-icon-menu      { background-position: 0 -752px; }
 .elfinder-button-icon-addclient,
+.elfinder-button-icon-mkscope,
 .elfinder-button-icon-mkuser { background-position: 0 -48px; }
 .elfinder-button-icon-permissions { background-position: 0 -64px; }
 
