Ticket 182 : Edit scope

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -157,6 +157,7 @@
 .elfinder-dialog-icon-addclient,
 .elfinder-dialog-icon-mkuser,
 .elfinder-dialog-icon-mkscope,
+.elfinder-dialog-icon-updatescope,
 .elfinder-dialog-icon-removeclient,
 .elfinder-dialog-icon-rmpolicy,
 .elfinder-dialog-icon-resourceinfo,
