Start to add the umaresource button

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -155,6 +155,7 @@
 .elfinder-dialog-icon-clientinformation,
 .elfinder-dialog-icon-authpolicy,
 .elfinder-dialog-icon-addclient,
+.elfinder-dialog-icon-umaresource,
 .elfinder-dialog-icon-mkuser,
 .elfinder-dialog-icon-mkscope,
 .elfinder-dialog-icon-updatescope,
