--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -150,6 +150,7 @@
 .elfinder-button-icon-menu      { background-position: 0 -752px; }
 .elfinder-button-icon-addclient,
 .elfinder-button-icon-mkscope,
+.elfinder-button-icon-umaresource,
 .elfinder-button-icon-mkuser { background-position: 0 -48px; }
 .elfinder-button-icon-permissions { background-position: 0 -64px; }
 
